# physics3d-engine

./: .gitignore  CMakeLists.txt  README.md
examples/: main.txt  matrix3d_example.cpp  matrix4d_example.cpp  matrix_example.cpp  quaternion_example.cpp  vector3d_example.cpp  vector4d_example.cpp  vector_example.cpp
include/physics/: Matrix3.hpp  Vector3D.hpp  vector4d.hpp  vector4d.inl
include/physics/core/: config.hpp  macros.hpp  types.hpp
include/physics/math/: matrix3d.hpp  matrix4d.hpp  quaternion.hpp  transform.hpp  vector3d.hpp  vector3d.inl  vector4d.hpp  vector4d.inl
src/math/: Matrix3.cpp  Vector3D.cpp  matrix3d.cpp  matrix4d.cpp  quaternion.cpp  transform.cpp  vector4d.cpp
tests/math/: test_Matrix3.cpp  test_Vector3D.cpp  test_matrix3d.cpp  test_matrix4d.cpp  test_quaternion.cpp  test_vector4d.cpp
